--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "start": "node build/server.js",
     "build": "tsup src --out-dir build",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/bcryptjs": "2.4.6",
     "@types/node": "^22.10.0",
+    "@vitest/coverage-v8": "2.1.6",
+    "@vitest/ui": "2.1.6",
     "eslint": "^8.57.1",
     "prisma": "5.22.0",
     "tsup": "^8.3.5",
