--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,4 @@ NODE_ENV=dev
 JWT_SECRET=asdfasdfadsf
 
 # Database
-DATABASE_URL="postgresql://docker:docker@localhost:5432/apisolid?schema=public"
+DATABASE_URL="postgresql://docker:docker@localhost:5432/api_solid?schema=public"
