feat: swagger implementation

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,6 @@ JWT_SECRET=asdfasdfadsf
 
 # Database
 DATABASE_URL="postgresql://docker:docker@localhost:5432/api_solid?schema=public"
+
+# Cors
+CORS_ORIGIN="*"
