--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:ui": "vitest --ui"
   },
   "devDependencies": {
+    "@fastify/cors": "10.0.1",
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/bcryptjs": "2.4.6",
     "@types/node": "^22.10.0",
@@ -28,6 +29,7 @@
     "@vitest/coverage-v8": "2.1.6",
     "@vitest/ui": "2.1.6",
     "eslint": "^8.57.1",
+    "fastify-type-provider-zod": "4.0.2",
     "npm-run-all": "4.1.5",
     "prisma": "5.22.0",
     "supertest": "7.0.0",
@@ -40,6 +42,8 @@
   "dependencies": {
     "@fastify/cookie": "11.0.1",
     "@fastify/jwt": "9.0.1",
+    "@fastify/swagger": "9.4.0",
+    "@fastify/swagger-ui": "5.2.0",
     "@prisma/client": "5.22.0",
     "bcryptjs": "2.4.3",
     "dayjs": "1.11.13",
